# Immich-Backup-Manager

./: BUILD.cmd  CHANGELOG.md  Cargo.toml  GITHUB_COMMENTS.txt  LICENSE  README.md  README.txt  RELEASE_NOTES.md  RELEASE_NOTES_1.3.1.md  RELEASE_NOTES_v1.3.0.md  SOURCE_CODE_NOTICE.md  build.rs
src/: main.rs
