[package]
name = "immich_backup_manager"
version = "1.3.2"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
kamadak-exif = "0.6"
base64 = "0.22"
winapi = { version = "0.3", features = ["dpapi", "wincrypt", "winbase"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[build-dependencies]
winres = "0.1"
